# LYKNCTF-2026-Challenge

./: README.md
Crypto/Replay-Jasmine/: aux_.py  chall.json
Crypto/Replay-Jasmine?/: aux.py
Forensics/NotPetya/: Readme.md  autosolve.js  flag.txt  gen_flag.js  log_autosolve.txt  make_challenge.ps1  make_zip.js  note.txt  pieces.json
Forensics/NotPetya/encryptor_cpp/: CMakeLists.txt  build.bat  build_dev.bat  main.cpp
Forensics/One Stroke/: Readme.md
Forensics/Thanh Hoa 1/: README.md  make_spectro.py  make_zip.py
Forensics/Thanh Hoa 2/: README.md  build_all.py  lsb.py  make_cover.py  make_zip.py
Forensics/World Cup 1/: README.md  SOLUTION.md  embed_flag.py  solve.py
Forensics/World Cup 2/: README.md  SOLUTION.md  embed_flag.py  solve.py
Misc/Elliptic Curve Cryptography/: chall.md
Osint/CTFTime/: README.md
Osint/Remedy/: Ehh.md
Pwn/Return-to-Lose/: Dockerfile  README.md  flag.txt  setup.md  solve.py
Pwn/Shop/: Makefile  README.md  flag.txt  shop.c  solve.py
Reverse/Control Freak 1/: README.md  gen.cpp  solve.py
Reverse/Control Freak 2/: README.md  gen.cpp  protect-vmprotect.ps1  solve.py
Reverse/Control Freak 3/: README.md  gen.cpp  protect-vmprotect.ps1  solve.py
Reverse/Cr4ck 1/: README.md  keygen.c  keygen.py  solve.py
Reverse/Cr4ck 2/: README.md  solve.py
Reverse/Cr4ck 3/: README.md  solve_dynamic.c
Reverse/Inferior Student/: challl.py
Reverse/Waguri2/: README.md  flag.txt  gen.py  output.txt  solve.py
Web/Discord Nitro/: Dockerfile  README.md  app.py
Web/Waguri1/: Dockerfile  README.md  package.json  server.js
(+47 files in other folders)
